--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -14,6 +14,16 @@ jobs:
       # Checks out a copy of your repository on the ubuntu-latest machine
       - name: Checkout code
         uses: actions/checkout@v2
+      
+      - name: Setup python
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.7
+      
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
 
       # Runs the Super-Linter action
       - name: Run Pylint
