--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -2,20 +2,20 @@ name: linter
 on: push
 
 jobs:
-    check_linting:
-        runs-on: ubuntu-latest
-        steps:
-        - name: Checkout code
-            uses: actions/checkout@v2
-        - name: Setup python
-            uses: actions/setup-python@v2
-            with:
-                python-version: 3.7
-        - name: Install dependencies
-            run: |
-                python -m pip install --upgrade pip
-                pip install -r requirements.txt
-        - name: Run pylint
-            run: bash ./scripts/linter.sh
+  check_linting:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+      - name: Setup python
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.7
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+      - name: Run linter
+        run: bash ./scripts/linter.sh
 
 
