Added yml file for FPS node

--- a/run_config.yml
+++ b/run_config.yml
@@ -1,6 +1,7 @@
 nodes:
-- input.recorded
+- input.live
 - model.yolo
+- draw.fps
 - draw.bbox
 - output.screen
-- output.media_writer
+# - output.media_writer
