--- a/setup.cfg
+++ b/setup.cfg
@@ -18,7 +18,7 @@ include_package_data = True
 # For edge devices?
 # [options.extras_require]
 [options.package_data]
-* = configs/*.yml
+* = configs/*/*.yml
 
 [options.packages.find]
 include = peekingduck, peekingduck.*
