--- a/.github/workflows/code_check.yml
+++ b/.github/workflows/code_check.yml
@@ -15,9 +15,16 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+          pip install mypy
       - name: Run linter
         run: bash ./scripts/linter.sh
       - name: Check for copyright and license headers in .py files
         run: bash ./scripts/check_headers.sh
+      - name: Check for type hinting
+        run: |
+          Get-ChildItem . -Filter "*.py" -Recurse | foreach {mypy $_.FullName `
+              --show-error-codes `
+              --raise-exceptions
+          }
 
 
