Add type check in Github action

--- a/.github/workflows/code_check.yml
+++ b/.github/workflows/code_check.yml
@@ -15,12 +15,11 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          pip install mypy
       - name: Run linter
         run: bash ./scripts/linter.sh
       - name: Check for copyright and license headers in .py files
         run: bash ./scripts/check_headers.sh
-      - name: Check for type hinting
+      - name: Run type cheaker
         run: bash ./scripts/check_hinting.sh
 
 
