Added efficientdet 0,2-5 weight files in config

--- a/peekingduck/configs/model_efficientdet_node.yml
+++ b/peekingduck/configs/model_efficientdet_node.yml
@@ -2,11 +2,18 @@ input: ['img']
 output: ['bboxes', 'labels', 'score']
 
 efficientdet_graph_mode: False
-model_type: 1 # 1-7
+model_type: 0 # 0-4
 weighted_bifpn: True
 classes: ../weights/efficientdet/coco_90.json
 weights_dir: ['../weights/efficientdet']
-model_files: { 1: ../weights/efficientdet/efficientdet-d1.h5 }
+model_files:
+    {
+        0: ../weights/efficientdet/efficientdet-d0.h5,
+        1: ../weights/efficientdet/efficientdet-d1.h5,
+        2: ../weights/efficientdet/efficientdet-d2.h5,
+        3: ../weights/efficientdet/efficientdet-d3.h5,
+        4: ../weights/efficientdet/efficientdet-d4.h5,
+    }
 size: [512, 640, 768, 896, 1024, 1280, 1408]
 num_classes: 90
 score_threshold: 0.3
