Furnished setup.cfg with more metadata

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,22 +1,30 @@
 [metadata]
-name = PeekingDuck-test
-version = 0.0.1
+name = peekingduck
+version = attr: peekingduck.__version__
+url = https://github.com/aimakerspace/PeekingDuck
+author = 'Computer Vision Hub, AI SINGAPORE'
+author_email = cvhub-ext@aisingapore.org
+keywords = 'peekingduck', 'computer vision', 'inference', 'edge'
 description = A simple tool for Computer Vision Inference
 long_description = file: README.md
 long_description_content_type = text/markdown
+classifiers =
+    Development Status :: 4 - Beta
+    Programming Language :: Python :: 3
+    License :: OSI Approved :: Apache Software License
+    Operating System :: OS Independent
 
 [options]
 packages = find:
 install_requires =
     pyyaml == 5.2
-    pytest == 6.2.3
-    pylint >= 2.7.4
     click == 7.1.2
 include_package_data = True
 
 # Optional Requirements that can be configured how pip behaves in circumstances
-# For edge devices?
+# TBD: Different extras for `full` and `edge`
 # [options.extras_require]
+
 [options.package_data]
 * = configs/*/*.yml
 
