Changed author to maintain consistency with copyright header

--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,7 @@
 name = peekingduck
 version = attr: peekingduck.__version__
 url = https://github.com/aimakerspace/PeekingDuck
-author = 'Computer Vision Hub, AI SINGAPORE'
+author = 'AI Singapore'
 author_email = cvhub-ext@aisingapore.org
 keywords = 'peekingduck', 'computer vision', 'inference', 'edge'
 description = A simple tool for Computer Vision Inference
