--- a/setup.cfg
+++ b/setup.cfg
@@ -11,8 +11,12 @@ long_description_content_type = text/markdown
 classifiers =
     Development Status :: 4 - Beta
     Programming Language :: Python :: 3
+    Programming Language :: Python :: 3.6
+    Programming Language :: Python :: 3.7
     License :: OSI Approved :: Apache Software License
     Operating System :: OS Independent
+    Topic :: Scientific/Engineering :: Artificial Intelligence
+    Topic :: Software Development :: Libraries :: Python Modules
 
 [options]
 packages = find:
