Fix inconsistent error

--- a/.github/workflows/code_check.yml
+++ b/.github/workflows/code_check.yml
@@ -20,6 +20,8 @@ jobs:
       - name: Check for copyright and license headers in .py files
         run: bash ./scripts/check_headers.sh
       - name: Run type checker
-        run: bash ./scripts/check_type.sh
+        run: |
+          pip install numpy==1.17.4
+          bash ./scripts/check_type.sh
 
 
