change resolution to dictionary instead of string

--- a/peekingduck/configs/model/posenet.yml
+++ b/peekingduck/configs/model/posenet.yml
@@ -1,8 +1,6 @@
 input: ["img"]
 output: ["poses","img"]
 
-model_class: posemodel
-pose_approach: bottomup
 model_type: resnet # 50, 75, 101 or resnet
 weights_dir: ["../weights/posenet/models"]
 weights_id: 0 # check and update weights id
@@ -12,12 +10,14 @@ model_files: {
     101: ../weights/posenet/models/model-mobilenet_v1_101.pb,
     resnet: ../weights/posenet/models/model-resnet.pb
 }
-resolution: 225x225
+# resolution: 225x225 # change to dictionary
+resolution: {
+  height: 225,
+  width: 225
+}
 output_stride: 16
 max_pose_detection: 10
 score_threshold: 0.4
-# train_data: COCO_keypoints/annotations/person_keypoints_train2017.json
-# validation_data: COCO_keypoints/annotations/person_keypoints_val2017.json
 
 MODEL_NODES:
   {
