--- a/setup.cfg
+++ b/setup.cfg
@@ -24,6 +24,11 @@ python_requires = >= 3.6
 install_requires =
     pyyaml >= 5.4
     click == 7.1.2
+    requests == 2.24
+    opencv-python == 4.1.2.30
+    tensorflow >= 2.2
+    numpy == 1.17
+    tqdm == 4.45.0
 include_package_data = True
 
 # Optional Requirements that can be configured how pip behaves in circumstances
