added flexibility to change keypoint color and radius in draw

--- a/peekingduck/configs/draw/poses.yml
+++ b/peekingduck/configs/draw/poses.yml
@@ -3,3 +3,7 @@ output: ["img"]
 
 bbox_color: [255, 0, 255]
 bbox_thickness: 2
+keypoint_dot_color: [0, 255, 0]
+keypoint_dot_radius: 5
+keypoint_connect_color: [0, 255, 255]
+keypoint_text_color: [255, 0, 255]
