Fix typo of scores in effdet config and added dummy weights_id

--- a/peekingduck/configs/model/efficientdet.yml
+++ b/peekingduck/configs/model/efficientdet.yml
@@ -1,10 +1,11 @@
 input: ['img']
-output: ['bboxes', 'labels', 'score']
+output: ['bboxes', 'labels', 'scores']
 
-efficientdet_graph_mode: True
-model_type: 0 # 0-4
+efficientdet_graph_mode: False
+model_type: 4 # 0-4
 classes: ../weights/efficientdet/coco_90.json
 weights_dir: ['../weights/efficientdet']
+weights_id: '1'
 model_files:
     {
         0: ../weights/efficientdet/efficientdet-d0.h5,
