--- a/peekingduck/configs/model/efficientdet.yml
+++ b/peekingduck/configs/model/efficientdet.yml
@@ -1,8 +1,8 @@
 input: ['img']
 output: ['bboxes', 'labels', 'scores']
 
-efficientdet_graph_mode: False
-model_type: 4 # 0-4
+efficientdet_graph_mode: True
+model_type: 0 # 0-4
 classes: ../weights/efficientdet/coco_90.json
 weights_dir: ['../weights/efficientdet']
 weights_id: '1'
