--- a/peekingduck/configs/model/yolo.yml
+++ b/peekingduck/configs/model/yolo.yml
@@ -6,7 +6,7 @@ model_class: humanmodel
 model_type: v4tiny # v3, v3tiny, v4 or v4tiny
 classes: ../weights/yolov3/models/coco.names
 weights_dir: ["../weights/yolov3", "../weights/yolov4"]
-weights_id: "1_FFZDDbHgghK23J4ekPhuawMoDd19uQO"
+blob_file: "yolo.zip"
 model_files: {
     v3: ../weights/yolov3/models/yolov3.tf,
     v3tiny: ../weights/yolov3/models/yolov3-tiny.tf,
