--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ opencv-python == 4.1.2.30
 pylint==2.7.4
 pyyaml == 5.2
 pytest == 6.2.3
+coverage == 5.5
 requests == 2.24.0
 tensorflow == 2.2.0
 tqdm == 4.45.0
