Update for downloading from azure blob

--- a/peekingduck/configs/model/efficientdet.yml
+++ b/peekingduck/configs/model/efficientdet.yml
@@ -4,7 +4,7 @@ output: ['bboxes', 'labels', 'scores']
 model_type: 0 # 0-4
 classes: ../weights/efficientdet/coco_90.json
 weights_dir: ['../weights/efficientdet']
-weights_id: '1'
+blob_file: 'efficientdet.zip'
 graph_files:
     {
         0: ../weights/efficientdet/efficientdet-d0.pb,
