Changed naming of bbox labels and scores

--- a/peekingduck/configs/model/efficientdet.yml
+++ b/peekingduck/configs/model/efficientdet.yml
@@ -1,5 +1,5 @@
 input: ['img']
-output: ['bboxes', 'labels', 'scores']
+output: ['bboxes', 'bbox_labels', 'bbox_scores']
 
 model_type: 0 # 0-4
 classes: ../weights/efficientdet/coco_90.json
