update weights download path

--- a/peekingduck/configs/model/posenet.yml
+++ b/peekingduck/configs/model/posenet.yml
@@ -3,7 +3,7 @@ output: ["bboxes", "pose_info", "img"]
 
 model_type: 75 # 50, 75, 101 or resnet
 weights_dir: ["../weights/posenet/models"]
-weights_id: 0 # check and update weights id
+blob_file: "posenet.zip"
 model_files:
   {
     50: ../weights/posenet/models/model-mobilenet_v1_050.pb,
