--- a/run_config.yml
+++ b/run_config.yml
@@ -1,5 +1,6 @@
 nodes:
-- input.live:
-- model.yolo:
-- draw.bbox:
-- output.screen:
+- input.live
+- model.yolo
+- draw.bbox
+- custom.draw.fps
+- output.screen
