--- a/run_config.yml
+++ b/run_config.yml
@@ -1,6 +1,7 @@
-- input.live
-- model.posenet
-- draw.poses
-- draw.bbox
-- custom.draw.fps
-- output.screen
+nodes:
+  - input.live
+  - model.posenet
+  - draw.poses
+  - draw.bbox
+  # - custom.draw.fps
+  - output.screen
