completed main readme v2

--- a/run_config.yml
+++ b/run_config.yml
@@ -1,8 +1,5 @@
 nodes:
-  - input.recorded:
-    - input_source: "/Users/ngleeping/Downloads/running.mp4"
-  - model.yolo:
-    - model_type: v4
-  - draw.bbox
-  - output.media_writer:
-    - outputdir: "/Users/ngleeping/Desktop/"
+- input.live
+- model.yolo
+- draw.bbox
+- output.screen
