--- a/peekingduck/configs/model/yolo.yml
+++ b/peekingduck/configs/model/yolo.yml
@@ -1,5 +1,5 @@
 input: ["img"]
-output: ["bboxes", "labels", "score"]
+output: ["bboxes", "bbox_labels", "bbox_scores"]
 
 model_class: humanmodel
 model_type: v4tiny # v3, v3tiny, v4 or v4tiny
@@ -13,6 +13,8 @@ graph_files: {
 size: 416
 num_classes: 80
 detect_ids: [0]
+max_output_size_per_class: 50
+max_total_size: 50
 yolo_iou_threshold: 0.5
 yolo_score_threshold: 0.2
 MODEL_NODES: {
