--- a/tests/pipeline/nodes/model/posenetv1/test_posenet.yml
+++ b/tests/pipeline/nodes/model/posenetv1/test_posenet.yml
@@ -1,5 +1,5 @@
 input: ["img"]
-output: ["bboxes", "pose_info", "img"]
+output: ["bboxes", "keypoints", "keypoint_scores", "keypoint_conns"]
 
 model_type: 75 # 50, 75, 101 or resnet
 weights_dir: ["../weights/posenet/models"]
