Added test for successful pypi pushing

--- a/.github/workflows/publish_pypi.yml
+++ b/.github/workflows/publish_pypi.yml
@@ -30,9 +30,30 @@ jobs:
       with:
         password: ${{ secrets.TEST_PYPI_API_TOKEN }}
         repository_url: https://test.pypi.org/legacy/
+    - name: Test installation from Test PyPI
+      run: |
+        sleep 30
+        pip install click pyyaml
+        pip install -i https://test.pypi.org/simple/ peekingduck==$VERSION --no-dependencies
+        peekingduck
     - name: Publish distribution 📦 to PyPI
     # only pushes to actual PyPI if its a tag (i.e. on release: published)
       if: startsWith(github.ref, 'refs/tags')
       uses: pypa/gh-action-pypi-publish@master
       with:
         password: ${{ secrets.PYPI_API_TOKEN }}
+
+  test-install-pypi:
+    name: Build PeekingDuck on Test PyPI
+    needs: build-publish-test
+    runs-on: ubuntu-18.04
+    steps:
+    - name: Set up Python 3.7
+      uses: actions/setup-python@v2
+      with:
+        python-version: 3.7
+    - name: Test installation from PyPI
+      run: |
+        pip install click pyyaml
+        pip install peekingduck==$VERSION --no-dependencies
+        peekingduck
