ci(systest): test usecases on runner

--- a/.github/workflows/system_tests.yml
+++ b/.github/workflows/system_tests.yml
@@ -29,5 +29,6 @@ jobs:
         python -m pip install --upgrade pip
         pip install peekingduck
     - name: Initialise peekingduck
-      run: |
-        peekingduck init
+      run: peekingduck init
+    - name: Test Usecases
+      run: ./scripts/usecase_tests.sh
