--- a/use_cases/object_counting.yml
+++ b/use_cases/object_counting.yml
@@ -1,8 +1,8 @@
 nodes:
-- input.live
+- input.recorded:
+  - input_dir: "images/testing" 
 - model.yolo
 - heuristic.bbox_count
 - draw.bbox
 - draw.bbox_count
 - draw.fps
-- output.screen
