Added a delay testing pypi(real) installation

--- a/.github/workflows/publish_pypi.yml
+++ b/.github/workflows/publish_pypi.yml
@@ -54,6 +54,7 @@ jobs:
         python-version: 3.7
     - name: Test installation from PyPI
       run: |
+        sleep 60
         pip install click pyyaml
         pip install peekingduck==$VERSION --no-dependencies # no tensorflow
         peekingduck
