--- a/tests/use_cases/group_size_checking.yml
+++ b/tests/use_cases/group_size_checking.yml
@@ -1,5 +1,6 @@
 nodes:
-- input.live
+- input.recorded:
+  - input_dir: "images/testing" 
 - model.posenet
 - heuristic.keypoints_to_3d_loc:
   - focal_length: 1.14
@@ -12,4 +13,3 @@ nodes:
 - draw.poses
 - draw.group_bbox_and_tag
 - draw.fps
-- output.screen
