--- a/use_cases/zone_counting.yml
+++ b/use_cases/zone_counting.yml
@@ -1,10 +1,14 @@
 nodes:
 - input.live
-- model.yolo
+- model.yolo:
+  - detect_ids: [0]
 - heuristic.bbox_to_btm_midpoint
 - heuristic.zone_count:
-  - zones: [[[0, 0], [640, 0], [640, 720], [0, 720]],
-            [[640, 0], [1280, 0], [1280, 720], [640, 720]]]
+  - resolution: [1280, 720]
+  - zones: [
+    [[0, 0], [0.6, 0], [0.6, 1], [0, 1]],
+    [[0.6, 0], [1, 0], [1, 1], [0.6, 1]]
+    ]
 - draw.bbox
 - draw.btm_midpoint
 - draw.zones
