test(nodes): small fix

--- a/tests/use_cases/object_counting.yml
+++ b/tests/use_cases/object_counting.yml
@@ -2,6 +2,7 @@ nodes:
 - input.recorded:
   - input_dir: "images/testing" 
 - model.yolo
+  - detect_ids: [0]
 - heuristic.bbox_count
 - draw.bbox
 - draw.bbox_count
