Added new requirements to setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -29,6 +29,8 @@ install_requires =
     tensorflow >= 2.2
     numpy == 1.17
     tqdm == 4.45.0
+    shapely == 1.7.1
+    scipy
 include_package_data = True
 
 # Optional Requirements that can be configured how pip behaves in circumstances
