fix(test): add colon

--- a/tests/use_cases/object_counting.yml
+++ b/tests/use_cases/object_counting.yml
@@ -1,7 +1,7 @@
 nodes:
 - input.recorded:
   - input_dir: "images/testing" 
-- model.yolo
+- model.yolo:
   - detect_ids: [0]
 - heuristic.bbox_count
 - draw.bbox
