--- a/peekingduck/configs/model/hrnet.yml
+++ b/peekingduck/configs/model/hrnet.yml
@@ -2,7 +2,7 @@ input: ['img', 'bboxes']
 output: ['keypoints', 'keypoint_scores', 'keypoint_conns']
 
 weights_dir: ['../weights/hrnet']
-blob_file: 'hrnet.zip' # not in azure blob yet
+blob_file: 'hrnet.zip'
 model_file: '../weights/hrnet/hrnet_frozen.pb'
 resolution: { height: 192, width: 256 }
 score_threshold: 0.1
