build(input.live): added functionality to saved live camera feed

--- a/peekingduck/configs/input/live.yml
+++ b/peekingduck/configs/input/live.yml
@@ -1,6 +1,7 @@
 input: ["source"]
-output: ["img"]
+output: ["img","filename","fps"]
 
+fps_saved_output_video: 10   #may need to change depending on user machine performance
 resize: {
             do_resizing: False,
             width: 1280,
