Modified gitignore to ignore autodoc files

--- a/.gitignore
+++ b/.gitignore
@@ -146,5 +146,6 @@ weights/
 build/
 dist/
 peekingduck.egg-info/
+docs/source/peekingduck.*.rst
 # Other likely files that should not be committed
 .DS_Store
