--- a/peekingduck/configs/input/live.yml
+++ b/peekingduck/configs/input/live.yml
@@ -1,5 +1,5 @@
 input: ["source"]
-output: ["img","filename","fps"]
+output: ["img", "pipeline_end", "filename", "fps"]
 
 fps_saved_output_video: 10   #may need to change depending on user machine performance
 filename: webcamfeed.mp4
