--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -12,5 +12,6 @@ formats:
 # Optionally set the version of Python and requirements required to build your docs
 python:
    version: 3.7
+   install:
       - requirements: sphinx_requirements.txt
 
