test(models): separate model and unit tests

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,8 @@
 [build-system]
 requires = ["setuptools >= 40.9.0", "wheel"]
 build-backend = "setuptools.build_meta"
+
+[tool.pytest.ini_options]
+markers = [
+    "mlmodel: marks tests as (slow) ml models (deselect with '-m \"not ml\"')",
+]
