--- a/.github/workflows/code_check.yml
+++ b/.github/workflows/code_check.yml
@@ -15,13 +15,14 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-      - name: Run linter
-        run: bash ./scripts/linter.sh
       - name: Check for copyright and license headers in .py files
         run: bash ./scripts/check_headers.sh
-      - name: Run type checker
-        run: bash ./scripts/check_type.sh
       - name: Run Bandit Linter
         run: bash ./scripts/bandit.sh
-
+      - name: Run linter
+        run: bash ./scripts/linter.sh
+      - name: Run type checker
+        run: bash ./scripts/check_type.sh
+      - name: Run unit tests
+        run: bash ./scripts/unit_tests.sh
 
