--- a/.github/workflows/mlmodel_tests.yml
+++ b/.github/workflows/mlmodel_tests.yml
@@ -1,4 +1,4 @@
-name: Unit Testing
+name: ML Model Tests
 on: 
   push:
     branches:
@@ -20,4 +20,4 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
       - name: Run unit tests
-        run: bash ./scripts/unit_tests.sh
+        run: bash ./scripts/mlmodel_tests.sh
