--- a/.gitignore
+++ b/.gitignore
@@ -146,6 +146,6 @@ weights/
 build/
 dist/
 peekingduck.egg-info/
-docs/source/peekingduck.*.rst
+docs/source/peekingduck.*
 # Other likely files that should not be committed
 .DS_Store
