--- a/peekingduck/configs/input/live.yml
+++ b/peekingduck/configs/input/live.yml
@@ -1,4 +1,4 @@
-input: ["source"]
+input: ["none"]
 output: ["img", "pipeline_end", "filename", "fps"]
 
 fps_saved_output_video: 10   #may need to change depending on user machine performance
