--- a/.github/workflows/mlmodel_tests.yml
+++ b/.github/workflows/mlmodel_tests.yml
@@ -19,5 +19,5 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-      - name: Run unit tests
+      - name: Run MLModel tests
         run: bash ./scripts/mlmodel_tests.sh
