--- a/.github/workflows/code_check.yml
+++ b/.github/workflows/code_check.yml
@@ -24,5 +24,5 @@ jobs:
       - name: Run type checker
         run: bash ./scripts/check_type.sh
       - name: Run unit tests
-        run: bash ./scripts/unit_tests.sh
+        run: bash ./scripts/run_tests.sh unit
 
