--- a/.github/workflows/mlmodel_tests.yml
+++ b/.github/workflows/mlmodel_tests.yml
@@ -20,4 +20,4 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
       - name: Run MLModel tests
-        run: bash ./scripts/mlmodel_tests.sh
+        run: bash ./scripts/run_tests.sh mlmodel
