refactor(core): updated config file format allowing nested params

--- a/use_cases/object_counting.yml
+++ b/use_cases/object_counting.yml
@@ -1,7 +1,7 @@
 nodes:
 - input.live
 - model.yolo:
-  - detect_ids: [0]
+    detect_ids: [0]
 - heuristic.bbox_count
 - draw.bbox
 - draw.bbox_count
