--- a/use_cases/group_size_checking.yml
+++ b/use_cases/group_size_checking.yml
@@ -2,12 +2,12 @@ nodes:
 - input.live
 - model.posenet
 - heuristic.keypoints_to_3d_loc:
-  - focal_length: 1.14
-  - torso_factor: 0.9
+    focal_length: 1.14
+    torso_factor: 0.9
 - heuristic.group_nearby_objs:
-  - obj_dist_thres: 1.5
+    obj_dist_thres: 1.5
 - heuristic.check_large_groups:
-  - group_size_thres: 2
+    group_size_thres: 2
 - draw.bbox
 - draw.poses
 - draw.group_bbox_and_tag
