refactor(comment): Clearer comment explanation

--- a/peekingduck/configs/input/live.yml
+++ b/peekingduck/configs/input/live.yml
@@ -10,4 +10,4 @@ resize: {
         }
 input_source: 0    # 0 for webcam, rtsp URL for CCTV
 mirror_image: False
-frames_log_freq: 100    # Showcases every number of frames passed
+frames_log_freq: 100    # Logs frequency of frames passed in cli
