--- a/.github/workflows/publish_pypi.yml
+++ b/.github/workflows/publish_pypi.yml
@@ -4,75 +4,76 @@ env:
 on:
   workflow_dispatch:
   release:
-    types: published
+    types: [published]
 
 jobs:
   local-install-test:
     name: Build PeekingDuck and test locally
     runs-on: ubuntu-18.04
-    - uses: actions/checkout@v2
-    - name: Set up Python 3.7
-      uses: actions/setup-python@v2
-      with:
-        python-version: 3.7
-    - name: Update Version Number
-      run: |
-        bash ./scripts/update_version.sh $VERSION
-    - name: Local Test
-      run: |
-        python -m pip install --upgrade pip
-        pip install .
-        bash ./scripts/run_tests.sh all
-        bash ./scripts/usecase_tests.sh
+    steps:
+      - uses: actions/checkout@v2
+      - name: Set up Python 3.7
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.7
+      - name: Update Version Number
+        run: |
+          bash ./scripts/update_version.sh $VERSION
+      - name: Local Test
+        run: |
+          python -m pip install --upgrade pip
+          pip install .
+          bash ./scripts/run_tests.sh all
+          bash ./scripts/usecase_tests.sh
   build-publish-test:
     name: Build PeekingDuck on Test PyPI
     needs: local-install-test
     runs-on: ubuntu-18.04
     steps:
-    - uses: actions/checkout@v2
-    - name: Set up Python 3.7
-      uses: actions/setup-python@v2
-      with:
-        python-version: 3.7
-    - name: Update Version Number
-      run: |
-        bash ./scripts/update_version.sh $VERSION
-    - name: Install pypa and build
-      run: |
-        echo "Building new version..."
-        python -m pip install --upgrade pip
-        python -m pip install build --user
-        python -m build --sdist --wheel --outdir dist/ .
-    - name: Publish distribution 📦 to Test PyPI
-      uses: pypa/gh-action-pypi-publish@master
-      with:
-        password: ${{ secrets.TEST_PYPI_API_TOKEN }}
-        repository_url: https://test.pypi.org/legacy/
-    - name: Test installation from Test PyPI
-      run: |
-        sleep 300
-        pip install click pyyaml
-        pip install -i https://test.pypi.org/simple/ peekingduck==$VERSION --no-dependencies # no tensorflow
-        peekingduck
-    - name: Publish distribution 📦 to PyPI
-    # only pushes to actual PyPI if its a tag (i.e. on release: published)
-      if: startsWith(github.ref, 'refs/tags')
-      uses: pypa/gh-action-pypi-publish@master
-      with:
-        password: ${{ secrets.PYPI_API_TOKEN }}
+      - uses: actions/checkout@v2
+      - name: Set up Python 3.7
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.7
+      - name: Update Version Number
+        run: |
+          bash ./scripts/update_version.sh $VERSION
+      - name: Install pypa and build
+        run: |
+          echo "Building new version..."
+          python -m pip install --upgrade pip
+          python -m pip install build --user
+          python -m build --sdist --wheel --outdir dist/ .
+      - name: Publish distribution 📦 to Test PyPI
+        uses: pypa/gh-action-pypi-publish@master
+        with:
+          password: ${{ secrets.TEST_PYPI_API_TOKEN }}
+          repository_url: https://test.pypi.org/legacy/
+      - name: Test installation from Test PyPI
+        run: |
+          sleep 300
+          pip install click pyyaml
+          pip install -i https://test.pypi.org/simple/ peekingduck==$VERSION --no-dependencies # no tensorflow
+          peekingduck
+      - name: Publish distribution 📦 to PyPI
+        # only pushes to actual PyPI if its a tag (i.e. on release: published)
+        if: startsWith(github.ref, 'refs/tags')
+        uses: pypa/gh-action-pypi-publish@master
+        with:
+          password: ${{ secrets.PYPI_API_TOKEN }}
 
   test-install-pypi:
     name: Build PeekingDuck on Test PyPI
     needs: build-publish-test
     runs-on: ubuntu-18.04
     steps:
-    - name: Set up Python 3.7
-      uses: actions/setup-python@v2
-      with:
-        python-version: 3.7
-    - name: Test installation from PyPI
-      run: |
-        sleep 300
-        pip install click pyyaml
-        pip install peekingduck==$VERSION --no-dependencies # no tensorflow
-        peekingduck
+      - name: Set up Python 3.7
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.7
+      - name: Test installation from PyPI
+        run: |
+          sleep 300
+          pip install click pyyaml
+          pip install peekingduck==$VERSION --no-dependencies # no tensorflow
+          peekingduck
