--- a/.github/actions/linting-checks/action.yaml
+++ b/.github/actions/linting-checks/action.yaml
@@ -5,9 +5,13 @@ runs:
   steps:
     - name: Check for copyright and license headers in .py files
       run: bash ./scripts/check_headers.sh
+      shell: bash
     - name: Run Bandit Linter
       run: bash ./scripts/bandit.sh
+      shell: bash
     - name: Run linter
       run: bash ./scripts/linter.sh
+      shell: bash
     - name: Run type checker
       run: bash ./scripts/check_type.sh
+      shell: bash
