--- a/tests/use_cases/object_counting.yml
+++ b/tests/use_cases/object_counting.yml
@@ -1,8 +1,8 @@
 nodes:
 - input.recorded:
-  - input_dir: "images/testing" 
+    input_dir: "images/testing" 
 - model.yolo:
-  - detect_ids: [0]
+    detect_ids: [0]
 - heuristic.bbox_count
 - draw.bbox
 - draw.bbox_count
