as per dicsussions added person labels to bottom up posenet model. Removed appending input requirements in node

--- a/peekingduck/configs/model/posenet.yml
+++ b/peekingduck/configs/model/posenet.yml
@@ -1,5 +1,5 @@
 input: ["img"]
-output: ["bboxes", "keypoints", "keypoint_scores", "keypoint_conns"]
+output: ["bboxes", "keypoints", "keypoint_scores", "keypoint_conns", "bbox_labels"]
 
 model_type: resnet # 50, 75, 101 or resnet
 weights_dir: ["../weights/posenet/models"]
