fix(csv_writer.config): in config output should be none instead of end

--- a/peekingduck/configs/output/csv_writer.yml
+++ b/peekingduck/configs/output/csv_writer.yml
@@ -1,5 +1,5 @@
 input: ["all"]
-output: ["end"]
+output: ["none"]
 
 stats_to_track: ["keypoints","bboxes","bbox_labels"]
 filepath: 'PeekingDuck/data/stats.csv'
