core(input.recorded): update fps with saved_video_fps

--- a/peekingduck/configs/input/recorded.yml
+++ b/peekingduck/configs/input/recorded.yml
@@ -1,5 +1,5 @@
 input: ["none"]
-output: ["img", "pipeline_end", "filename", "fps"]
+output: ["img", "pipeline_end", "filename", "saved_video_fps"]
 
 resize: {
             do_resizing: False,
