core(output.media_writer): update fps to saved_video_fps, also updated in test.media_writer

--- a/peekingduck/configs/output/media_writer.yml
+++ b/peekingduck/configs/output/media_writer.yml
@@ -1,4 +1,4 @@
-input: ["img", "filename", "fps"]
+input: ["img", "filename", "saved_video_fps"]
 output: ["none"]
 
 output_dir: 'PeekingDuck/data/output'
