refactor(core): reset writer using pipeline_end

--- a/peekingduck/configs/output/media_writer.yml
+++ b/peekingduck/configs/output/media_writer.yml
@@ -1,4 +1,4 @@
-input: ["img", "filename", "saved_video_fps"]
+input: ["img", "filename", "saved_video_fps", "pipeline_end"]
 output: ["none"]
 
 output_dir: 'PeekingDuck/data/output'
