--- a/peekingduck/configs/draw/legend.yml
+++ b/peekingduck/configs/draw/legend.yml
@@ -1,6 +1,6 @@
 input: ["all"]
 output: ["img"]
 
-all_legend_items: ["fps", "count"]
+all_legend_items: ["fps", "count", "zone_count"]
 position: "bottom"
 include: ["all_legend_items"]
