fix(cicd): update environment setup

--- a/.github/actions/linting-checks/action.yaml
+++ b/.github/actions/linting-checks/action.yaml
@@ -13,5 +13,7 @@ runs:
       run: bash ./scripts/linter.sh
       shell: bash
     - name: Run type checker
-      run: bash ./scripts/check_type.sh
+      run: |
+        mypy --install-types peekingduck
+        bash ./scripts/check_type.sh
       shell: bash
