--- a/.github/actions/linting-checks/action.yaml
+++ b/.github/actions/linting-checks/action.yaml
@@ -14,6 +14,6 @@ runs:
       shell: bash
     - name: Run type checker
       run: |
-        mypy --install-types peekingduck
+        echo y | mypy --install-types peekingduck
         bash ./scripts/check_type.sh
       shell: bash
