ci(cicd-infra): added windows to pre and post merge unit tests

--- a/.github/workflows/post_merge_checks.yml
+++ b/.github/workflows/post_merge_checks.yml
@@ -8,7 +8,10 @@ on:
 
 jobs:
   all_tests:
-    runs-on: ubuntu-18.04
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-18.04, windows-2019]
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
