--- a/.github/workflows/pre_merge_ci.yml
+++ b/.github/workflows/pre_merge_ci.yml
@@ -3,7 +3,10 @@ on: [push, pull_request]
 
 jobs:
   check_code:
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-18.04, windows-2019]
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
