refactor(packaging): updated use case configs and removed deprecated nodes

--- a/tests/use_cases/systest_object_counting.yml
+++ b/tests/use_cases/systest_object_counting.yml
@@ -4,6 +4,6 @@ nodes:
 - model.yolo:
     detect_ids: [0]
 - heuristic.bbox_count
+- heuristic.fps
 - draw.bbox
-- draw.bbox_count
-- draw.fps
+- draw.legend
