--- a/tests/use_cases/systest_group_size_checking.yml
+++ b/tests/use_cases/systest_group_size_checking.yml
@@ -9,7 +9,8 @@ nodes:
     obj_dist_thres: 1.5
 - heuristic.check_large_groups:
     group_size_thres: 2
-- draw.bbox
+- heuristic.fps
+- draw.bbox     # not in demo config, but included here
 - draw.poses
 - draw.group_bbox_and_tag
-- draw.fps
+- draw.legend
