--- a/use_cases/object_counting.yml
+++ b/use_cases/object_counting.yml
@@ -3,7 +3,7 @@ nodes:
 - model.yolo:
     detect_ids: [0]
 - heuristic.bbox_count
+- heuristic.fps
 - draw.bbox
-- draw.bbox_count
-- draw.fps
+- draw.legend
 - output.screen
