test(yolo): remove log_cli, set to run_tests unit mode for premerge

--- a/.github/workflows/pre_merge_ci.yml
+++ b/.github/workflows/pre_merge_ci.yml
@@ -21,4 +21,4 @@ jobs:
       - name: Run lint checks
         uses: ./.github/actions/linting-checks  # note only works after checkout@v2
       - name: Run unit tests
-        run: bash ./scripts/run_tests.sh all
+        run: bash ./scripts/run_tests.sh unit
