refactor: replace heuristics with peek and check_large_group with check_group_size

--- a/tests/use_cases/object_counting.yml
+++ b/tests/use_cases/object_counting.yml
@@ -3,7 +3,7 @@ nodes:
     input_dir: "images/testing" 
 - model.yolo:
     detect_ids: [0]
-- heuristic.bbox_count
+- peek.bbox_count
 - draw.bbox
 - draw.bbox_count
 - draw.fps
