--- a/tests/use_cases/group_size_checking.yml
+++ b/tests/use_cases/group_size_checking.yml
@@ -2,12 +2,12 @@ nodes:
 - input.recorded:
     input_dir: "images/testing" 
 - model.posenet
-- heuristic.keypoints_to_3d_loc:
+- peek.keypoints_to_3d_loc:
     focal_length: 1.14
     torso_factor: 0.9
-- heuristic.group_nearby_objs:
+- peek.group_nearby_objs:
     obj_dist_thres: 1.5
-- heuristic.check_large_groups:
+- peek.check_group_size:
     group_size_thres: 2
 - draw.bbox
 - draw.poses
