--- a/tests/use_cases/zone_counting.yml
+++ b/tests/use_cases/zone_counting.yml
@@ -3,8 +3,8 @@ nodes:
     input_dir: "images/testing" 
 - model.yolo:
     detect_ids: [0]
-- heuristic.bbox_to_btm_midpoint
-- heuristic.zone_count:
+- peek.bbox_to_btm_midpoint
+- peek.zone_count:
     resolution: [1280, 720]
     zones: [
     [[0, 0], [0.6, 0], [0.6, 1], [0, 1]],
