--- a/tests/use_cases/object_counting.yml
+++ b/tests/use_cases/object_counting.yml
@@ -3,7 +3,7 @@ nodes:
     input_dir: "images/testing" 
 - model.yolo:
     detect_ids: [0]
-- peek.bbox_count
+- dabble.bbox_count
 - draw.bbox
 - draw.bbox_count
 - draw.fps
