--- a/tests/use_cases/social_distancing.yml
+++ b/tests/use_cases/social_distancing.yml
@@ -2,10 +2,10 @@ nodes:
 - input.recorded:
     input_dir: "images/testing" 
 - model.posenet
-- peek.keypoints_to_3d_loc:
+- dabble.keypoints_to_3d_loc:
     focal_length: 1.14
     torso_factor: 0.9
-- peek.check_nearby_objs:
+- dabble.check_nearby_objs:
     near_threshold: 1.5
     tag_msg: "TOO CLOSE!"
 - draw.bbox
