--- a/use_cases/group_size_checking.yml
+++ b/use_cases/group_size_checking.yml
@@ -1,12 +1,12 @@
 nodes:
 - input.live
 - model.posenet
-- peek.keypoints_to_3d_loc:
+- dabble.keypoints_to_3d_loc:
     focal_length: 1.14
     torso_factor: 0.9
-- peek.group_nearby_objs:
+- dabble.group_nearby_objs:
     obj_dist_thres: 1.5
-- peek.check_group_size:
+- dabble.check_large_groups:
     group_size_thres: 2
 - draw.bbox
 - draw.poses
