--- a/tests/use_cases/systest_zone_counting.yml
+++ b/tests/use_cases/systest_zone_counting.yml
@@ -3,14 +3,14 @@ nodes:
     input_dir: "images/testing" 
 - model.yolo:
     detect_ids: [0]
-- heuristic.bbox_to_btm_midpoint
-- heuristic.zone_count:
+- dabble.bbox_to_btm_midpoint
+- dabble.zone_count:
     resolution: [1280, 720]
     zones: [
     [[0, 0], [0.6, 0], [0.6, 1], [0, 1]],
     [[0.6, 0], [1, 0], [1, 1], [0.6, 1]]
     ]
-- heuristic.fps
+- dabble.fps
 - draw.bbox
 - draw.btm_midpoint
 - draw.zones
