--- a/use_cases/object_counting.yml
+++ b/use_cases/object_counting.yml
@@ -2,8 +2,8 @@ nodes:
 - input.live
 - model.yolo:
     detect_ids: [0]
-- heuristic.bbox_count
-- heuristic.fps
+- dabble.bbox_count
+- dabble.fps
 - draw.bbox
 - draw.legend
 - output.screen
