--- a/tests/use_cases/systest_group_size_checking.yml
+++ b/tests/use_cases/systest_group_size_checking.yml
@@ -2,14 +2,14 @@ nodes:
 - input.recorded:
     input_dir: "images/testing" 
 - model.posenet
-- heuristic.keypoints_to_3d_loc:
+- dabble.keypoints_to_3d_loc:
     focal_length: 1.14
     torso_factor: 0.9
-- heuristic.group_nearby_objs:
+- dabble.group_nearby_objs:
     obj_dist_thres: 1.5
-- heuristic.check_large_groups:
+- dabble.check_large_groups:
     group_size_thres: 2
-- heuristic.fps
+- dabble.fps
 - draw.bbox     # not in demo config, but included here
 - draw.poses
 - draw.group_bbox_and_tag
