--- a/tests/use_cases/systest_social_distancing.yml
+++ b/tests/use_cases/systest_social_distancing.yml
@@ -2,13 +2,13 @@ nodes:
 - input.recorded:
     input_dir: "images/testing" 
 - model.posenet
-- heuristic.keypoints_to_3d_loc:
+- dabble.keypoints_to_3d_loc:
     focal_length: 1.14
     torso_factor: 0.9
-- heuristic.check_nearby_objs:
+- dabble.check_nearby_objs:
     near_threshold: 1.5
     tag_msg: "TOO CLOSE!"
-- heuristic.fps
+- dabble.fps
 - draw.poses
 - draw.bbox     # not in demo config, but included here
 - draw.tag
