--- a/use_cases/group_size_checking.yml
+++ b/use_cases/group_size_checking.yml
@@ -1,14 +1,14 @@
 nodes:
 - input.live
 - model.posenet
-- heuristic.keypoints_to_3d_loc:
+- dabble.keypoints_to_3d_loc:
     focal_length: 1.14
     torso_factor: 0.9
-- heuristic.group_nearby_objs:
+- dabble.group_nearby_objs:
     obj_dist_thres: 1.5
-- heuristic.check_large_groups:
+- dabble.check_large_groups:
     group_size_thres: 2
-- heuristic.fps
+- dabble.fps
 - draw.poses
 - draw.group_bbox_and_tag
 - draw.legend
