--- a/use_cases/social_distancing.yml
+++ b/use_cases/social_distancing.yml
@@ -1,13 +1,13 @@
 nodes:
 - input.live
 - model.posenet
-- heuristic.keypoints_to_3d_loc:
+- dabble.keypoints_to_3d_loc:
     focal_length: 1.14
     torso_factor: 0.9
-- heuristic.check_nearby_objs:
+- dabble.check_nearby_objs:
     near_threshold: 1.5
     tag_msg: "TOO CLOSE!"
-- heuristic.fps
+- dabble.fps
 - draw.poses
 - draw.tag
 - draw.legend
