--- a/.github/workflows/pre_merge_ci.yml
+++ b/.github/workflows/pre_merge_ci.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install -r cicd_requirements.txt
       - name: Run lint checks
         uses: ./.github/actions/linting-checks  # note only works after checkout@v2
       - name: Run unit tests
