--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,9 @@
 click == 7.1.2
 opencv-python == 4.1.2.30
-pylint==2.7.4
-pyyaml == 5.4
-pytest == 6.2.3
-coverage == 5.5
 requests == 2.24.0
 shapely == 1.7.1
 tensorflow == 2.2.0
 tqdm == 4.45.0
-mypy == 0.910
 numpy == 1.17.4
-bandit == 1.7.0
-types-PyYAML==5.4.3
-types-requests==2.25.0
-types-six==0.1.7
+pyyaml == 5.4
+scipy
