--- a/setup.cfg
+++ b/setup.cfg
@@ -5,7 +5,7 @@ url = https://github.com/aimakerspace/PeekingDuck
 author = 'AI Singapore'
 author_email = cvhub-ext@aisingapore.org
 keywords = 'peekingduck', 'computer vision', 'inference', 'edge'
-description = A simple tool for Computer Vision Inference
+description = A modular framework built to simplify Computer Vision Inference Workloads.
 long_description = file: README.md
 long_description_content_type = text/markdown
 classifiers =
