--- a/.github/workflows/pre_merge_ci.yml
+++ b/.github/workflows/pre_merge_ci.yml
@@ -23,4 +23,4 @@ jobs:
       - name: Run unit tests
         run: bash ./scripts/run_tests.sh unit
       - name: Run Link Check tests
-        run: python ./check_links.py
+        run: python ./scripts/check_links.py
